<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.fortuneteller.cup.ui.main.MainFragment"
        android:label="@string/title_main_fragment"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_main_to_scan"
            app:destination="@id/scanFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.fortuneteller.cup.ui.editprofile.EditProfileFragment"
        android:label="@string/title_edit_profile" />
    <fragment
        android:id="@+id/scanFragment"
        android:name="com.fortuneteller.cup.ui.scan.ScanFragment"
        android:label="@string/title_scan_fragment" >
        <argument
            android:name="imageUri"
            app:argType="string" />
    </fragment>


</navigation>